# xtractor

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  result.json  schema.json
.github/workflows/: deploy.yml
src/xtractor/: __init__.py
src/xtractor/adapters/: io.py  llm.py
src/xtractor/api/: app.py
src/xtractor/api/routers/: extract.py
src/xtractor/cli/: main.py
src/xtractor/config/: settings.py
src/xtractor/models/: payload.py  responses.py
src/xtractor/pipeline/: __init__.py  build.py  runner.py  state.py
src/xtractor/pipeline/nodes/: common.py  file_understanding.py  multimodal_extract.py  postprocess.py  prompt_builder.py  prompt_merge.py  symbol_agent.py  symbol_router.py
src/xtractor/utils/: validators.py
